[refactor] collector -> list 수정 - #95